feedback index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="nav-link active" href="about.html">About</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="contact.html">Feedback</a>
+                    <a class="nav-link" href="https://forms.gle/rQNkvcNV38W1o5UY8">Feedback</a>
                 </li>
 
 
