--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                 </li>
 
                 <li class="nav-item active">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
+                    <a class="nav-link" href="https://forms.gle/rQNkvcNV38W1o5UY8">Contact Us</a>
                 </li>
 
 
