Feedback learn.html

--- a/learn.html
+++ b/learn.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="https://forms.gle/rQNkvcNV38W1o5UY8">Feedback</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0 ml-auto">
