developer content about.html

--- a/about.html
+++ b/about.html
@@ -74,12 +74,17 @@
                  
             </div>
         </div>
+        <div class="row featurette d-flex justify-content-center align-items-center">
+            <div class="col-md-7 order-md-2">
+                <h2 class="featurette-heading">About the Developer</h2>
+                <p class="lead"> Hey Everyone! I'm Dhananjay Pratap Singh Chandel, and I'm the creator of Code Grace. My passion lies in making the world of programming languages accessible to everyone. Through my own experiences as a learner, I've designed Code Grace as a warm and inviting space for you to embark on your programming journey. Together, let's navigate the intricacies of coding and unlock your full potential, one step at a time.</p>
+            </div>
+            <div class="col-md-5 order-md-1">
+                <img class="img-fluid" src="about-2.jpg" alt="">
+                 
+            </div>
+        </div>
     </div>
-
-    <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>© 2020-2021 iCoder, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
-      </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
