active operator.html

--- a/operator.html
+++ b/operator.html
@@ -64,13 +64,13 @@
       <nav class="col-md-3 col-lg-2 bg-light sidebar" id="sidebar">
         <!-- Sidebar content here -->
         <div class="list-group">
-          <a href="intro.html" class="list-group-item list-group-item-action active" aria-current="true">Intro</a>
+          <a href="intro.html" class="list-group-item list-group-item-action">Intro</a>
           <a href="started.html" class="list-group-item list-group-item-action">Getting started</a>
           <a href="syntax.html" class="list-group-item list-group-item-action">Syntax</a>
           <a href="datatype.html" class="list-group-item list-group-item-action">Data Types</a>
           <a href="output.html" class="list-group-item list-group-item-action">Printf</a>
           <a href="input.html" class="list-group-item list-group-item-action">Scanf</a>
-          <a href="operator.html" class="list-group-item list-group-item-action">Operators</a>
+          <a href="operator.html" class="list-group-item list-group-item-action active" aria-current="true">Operators</a>
           <a href="if-else.html" class="list-group-item list-group-item-action">If-Else statements</a>
           <a href="switch.html" class="list-group-item list-group-item-action">Switch</a>
           <a href="while.html" class="list-group-item list-group-item-action">While loop</a>
