--- a/syntax.html
+++ b/syntax.html
@@ -85,7 +85,7 @@
       </nav>
       <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4 main">
         <!-- Main content here -->
-        <h1 class="text-center">Syantax</h1>
+        <h1 class="text-center">Syntax</h1>
   <div class="fs-5">
       <p><strong>Syntax:</strong></p>
       <p>In C programming, understanding the syntax is crucial as it forms the foundation of writing correct and efficient code. Let's explore the basic elements of C syntax:
