mentor Update about.html

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-7">
                 <h2 class="featurette-heading">About the Mentor</h2>
-                <p class="lead"><strong>Dr. Sandeep K. Sharma.</strong><br>Sir laid the foundation of this project  and under his direction and god's grace, our project  took this shape and will be evoling to better in the coming future.</p>
+                <p class="lead"><strong>Dr. Sandeep K. Sharma.</strong><br>Assistant Professor at the department of CCE in MUJ. <br>Under his direction and god's grace, our project  took this shape and will be evoling to better in the coming future.</p>
             </div>
             <div class="col-md-5">
                 <img class="img-fluid" src="about-3.jpg" alt="">
@@ -86,7 +86,7 @@
         </div>
     </div>
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->            
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
