--- a/c.html
+++ b/c.html
@@ -126,15 +126,15 @@
           <div class="col-lg-4 my-4">
             <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://st2.depositphotos.com/1853861/7029/v/450/depositphotos_70298381-stock-illustration-learn-more-button.jpg" alt="Placeholder image">
  
-            <h2 class="fw-normal">Learn More</h2>
-            <p>If you are new to programmig then visit here to learn basics from video lectures.</p>
+            <h2 class="fw-normal">Learn</h2>
+            <p>New to programmig! Then visit here to learn basics from video lectures.</p>
             <p><a class="btn btn-info" href="learn.html">View details »</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4 my-4">
             <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://thumbs.dreamstime.com/b/practice-round-button-isolated-white-background-practice-practice-button-122713403.jpg" alt="Placeholder image">
  
-            <h2 class="fw-normal">Practice</h2>
-            <p>If you have learnt some thing and got an idea. Then this is the time to practice. Get example codes and more...</p>
+            <h2 class="fw-normal">Theory</h2>
+            <p>Get short crisp and complete theory part, example codes and more...</p>
             <p><a class="btn btn-warning" href="intro.html">View details »</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4 my-4">
